# GrzesSFMLlib

./: .gitignore  .gitmodules  README.md  dockerfile  doxygen.conf  makefile  makewinBuild.sh  meson.build  meson_options.txt
docs/: arch.dot  docs.tex  renderable.dot  zgłoszenie.tex
krita files/: bulletv1.kra  circle.kra  wall1.kra
resources/: test.aac
resources/sfx/: bulletsound.wav.aac  explosion.wav.aac  hurt.wav.aac  shoot1.wav.aac  walk.wav.aac
resources/shaders/: bullet.frag  explosion.frag  hp.frag  testFrag.frag
sfxr-raw/: bulletSound.ftm  explosion.sfxr  hurt.sfxr  shoot1.sfxr  walk.sfxr
src/: constants.hpp  funcs.hpp  gameloop.cpp  main.cpp  makefile
src/Audio/: AudioMacros.cpp  AudioMacros.hpp  AudioScene.cpp  AudioScene.hpp  FFmpegMacros.hpp  Player.cpp  Player.hpp
src/Component/: Component.cpp  Component.hpp
src/Component/templates/: BigExplosion.cpp  BigExplosion.hpp  Bullet.cpp  Bullet.hpp  BulletSound.cpp  BulletSound.hpp  Creature.cpp  Creature.hpp  Debug.cpp  Debug.hpp  Enemy.cpp  Enemy.hpp  EnemyController.cpp  EnemyController.hpp  EnemyTarget.cpp  EnemyTarget.hpp  Explosion.cpp  Explosion.hpp  GameOverText.cpp  GameOverText.hpp  Gun.cpp  Gun.hpp  HPdisplayer.cpp  HPdisplayer.hpp  Korwin.cpp  Korwin.hpp  Physics.cpp  Physics.hpp  Player.cpp  Player.hpp  Renderable.hpp  ShadedSprite.cpp  ShadedSprite.hpp  Spawner.cpp  Spawner.hpp  Sprite.cpp  Sprite.hpp  StaticPhysics.cpp  StaticPhysics.hpp  TutorialText.cpp  (+4 more)
src/Component/templates/guns/: Pistol.cpp  Pistol.hpp
src/Component/templates/spawners/: Test.hpp
src/Component/templates/sprites/: Background.cpp  Background.hpp  Bullet.cpp  Bullet.hpp  Explosion.cpp  Explosion.hpp  HPeffect.cpp  HPeffect.hpp  Player.cpp  Player.hpp  Test.cpp  Test.hpp  Wall.cpp  Wall.hpp
src/Entity/: ChunkCoord.cpp  ChunkCoord.hpp  Entity-System.cpp  Entity-System.hpp  Entity-Tags.hpp  Entity.cpp  Entity.hpp  Inputs.cpp  Inputs.hpp  SystemStates.hpp
src/Entity/templates/: Background.cpp  Background.hpp  BigExplosion.cpp  BigExplosion.hpp  Bullet.cpp  Bullet.hpp  Explosion.cpp  Explosion.hpp  GameOverText.cpp  GameOverText.hpp  HPdisplay.cpp  HPdisplay.hpp  HPeffect.cpp  HPeffect.hpp  Korwin.cpp  Korwin.hpp  Player.cpp  Player.hpp  SpawnerTest.cpp  SpawnerTest.hpp  Target.cpp  Target.hpp  Test.cpp  Test.hpp  TutorialText.cpp  TutorialText.hpp  Wall.cpp  Wall.hpp
src/Utils/: CameraSmoother.cpp  CameraSmoother.hpp  ContactListener.cpp  ContactListener.hpp  Operations.hpp  Position.cpp  Random.cpp  Random.hpp  ResourceManager.cpp  ResourceManager.hpp
